# dPLGR4JNet

./: CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
LICENSES/: torchhydro-BSD-3-Clause.txt
configs/: default.yaml
docs/: PUBLIC_RELEASE_CHECKLIST.md  software-availability.md
dplgr4jnet/: __init__.py  __main__.py  cli.py  config.py  data.py  losses.py  metrics.py  model.py  postprocess.py  trainer.py
